[package]
name = "climate-server"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "*", features = ["runtime-async-std-rustls", "mysql", "macros", "chrono", "uuid", "decimal"] }
uuid = { version = "*", features = ["v4"] }
dotenv = "*"
async-std = { version = "*", features = [ "attributes" ] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
chrono = { version = "0.4.24", features = ["alloc", "clock", "serde"] }
tide = "*"
tide-compress = "*"
lazy_static = "*"
futures = "0.3.28"
rust_decimal = { version = "1.29", features = ["serde-float", "serde-with-float"] }
rust_decimal_macros = "1.29"